tests/specs/ecosystem/std/archive/0_208_0.test
std/archive/0.208.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.208.0": "jsr:@std/internal@0.208.0"
    },
    "jsr": {
      "@std/internal@0.208.0": {
        "integrity": "8bf459f0162674915d8adb9bea49229a3ab09af0362a095489674481d7af0927"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

error: Type checking failed.

